# Django-Template

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: master.yml  pr.yml
core/: conftest.py
core/app/: models.py  serializers.py  tests.py  urls.py  views.py
core/app/migrations/: 0001_initial.py
core/core/: _settings.py  urls.py
core/core/settings/: __init__.py  base.py  channels.py  custom.py  envvars.py  rest_framework.py
core/core/settings/templates/: settings.dev.py  settings.unittests.py
core/general/utils/: misc.py  settings.py
scripts/: entrypoint.sh
tests/fixtures/: accounts.py  clients.py  misc.py
