[tool.poetry]
name = "project core"
version = "0.1.0"
description = "project core"
authors = ["Name <Name@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
djangorestframework = "3.15"
pre-commit = "^3.8"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
